feat: estructura del informe final

--- a/notebooks/01_eda_inicial.ipynb
+++ b/notebooks/01_eda_inicial.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18354f58",
+   "id": "b30ccc42",
    "metadata": {},
    "source": [
+    "_\n",
     "<img style=\"float: right; margin: 15px 15px 15px 15px;\" src=\"https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2\" width=\"240px\" height=\"240px\" />\n",
     "\n",
-    "\n",
-    "# <font color= #bbc28d> *Clasificación de Depresión - EDA* </font>\n",
-    "#### <font color= #2E9AFE>Proyecto de Ciencia de Datos</font>\n",
+    "# <p style=\"color: #bbc28d\"> **Clasificación de Depresión - EDA** </p>\n",
+    "#### <p style=\"color: #2E9AFE\"> Proyecto de Ciencia de Datos </p>\n",
     "- <Strong> Sofía Maldonado, Diana Valdivia, Samantha Sánchez & Vivienne Toledo </Strong>\n",
-    "- <Strong> Fecha </Strong>: XX/XX/2025."
+    "- <Strong> Fecha </Strong>: xx/xx/2025.\n",
+    "\n",
+    "_\n",
+    "\n",
+    "<p style=\"text-align:right;\"> Image retrieved from: https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2/p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1af92230",
+   "metadata": {},
+   "source": [
+    "### <font color= #bbc28d>• **Data Loading** </font>"
    ]
   },
   {
@@ -398,6 +410,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c5e284b",
+   "metadata": {},
+   "source": [
+    "### <font color= #bbc28d>• **Data Info** </font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "2c456b39",
@@ -441,6 +461,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1bb6cb5",
+   "metadata": {},
+   "source": [
+    "### <font color= #bbc28d>• **Eliminar nulos** </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "77302836",
    "metadata": {},
    "source": [
@@ -455,6 +483,14 @@
    "outputs": [],
    "source": [
     "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad52c662",
+   "metadata": {},
+   "source": [
+    "### <font color= #bbc28d>• **Histogramas** </font>"
    ]
   },
   {
@@ -486,6 +522,14 @@
     "- La mayoría de personas dicen que *si* sufren de depresión. Podría valer la pena equilibrar estos valores para nuestro modelo. \n",
     "- Hay niveles muy altos de estrés financiero, una variable que posiblemente va a terminar siendo muy relevante.\n",
     "- Similarmente, hay niveles muy altos de presión académica."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4fb8412",
+   "metadata": {},
+   "source": [
+    "### <font color= #bbc28d>• **Descripción de Variables** </font>"
    ]
   },
   {
@@ -802,6 +846,14 @@
    "source": [
     "<li> Este es un estudio de gente jóven, la edad promedio es de apenas 25.8 años.\n",
     "<li> Este subset de personas trabaja mucho. En promedio, 7 horas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f15e086",
+   "metadata": {},
+   "source": [
+    "### <font color= #bbc28d>• **Variables Categóricas** </font>"
    ]
   },
   {
