--- a/notebooks/01_eda_inicial.ipynb
+++ b/notebooks/01_eda_inicial.ipynb
@@ -5,15 +5,15 @@
    "id": "b30ccc42",
    "metadata": {},
    "source": [
-    "_\n",
-    "<img style=\"float: right; margin: 15px 15px 15px 15px;\" src=\"https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2\" width=\"240px\" height=\"240px\" />\n",
+    "___\n",
+    "<img style=\"float: right; margin: 15px 15px 15px 15px;\" src=\"https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2\" width=\"240px\" height=\"180px\" />\n",
     "\n",
-    "# <p style=\"color: #bbc28d\"> **Clasificación de Depresión - EDA** </p>\n",
-    "#### <p style=\"color: #2E9AFE\"> Proyecto de Ciencia de Datos </p>\n",
+    "# <font color= #bbc28d> **Clasificación de Depresión - EDA** </font>\n",
+    "#### <font color= #2E9AFE> `Proyecto de Ciencia de Datos`</font>\n",
     "- <Strong> Sofía Maldonado, Diana Valdivia, Samantha Sánchez & Vivienne Toledo </Strong>\n",
     "- <Strong> Fecha </Strong>: xx/xx/2025.\n",
     "\n",
-    "_\n",
+    "___\n",
     "\n",
     "<p style=\"text-align:right;\"> Image retrieved from: https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2/p>"
    ]
