--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -2,10 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fd5fecb6",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<img style=\"float: right; margin: 15px 15px 15px 15px;\" src=\"https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2\" width=\"240px\" height=\"180px\" />\n",
+    "\n",
+    "# <font color= #bbc28d> **Clasificación de Depresión - Informe Final** </font>\n",
+    "#### <font color= #2E9AFE> `Proyecto de Ciencia de Datos`</font>\n",
+    "- <Strong> Sofía Maldonado, Diana Valdivia, Samantha Sánchez & Vivienne Toledo </Strong>\n",
+    "- <Strong> Fecha </Strong>: xx/xx/2025.\n",
+    "\n",
+    "___\n",
+    "\n",
+    "<p style=\"text-align:right;\"> Image retrieved from: https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2/p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b2f2847",
    "metadata": {},
    "source": [
-    "## <font color= #bbc28d>• **Introducción** </font>"
+    "## <font color= #bbc28d>• **Introducción** </font>\n",
+    "El análisis de datos relacionados con la **salud mental** se ha convertido en un área de creciente interés dentro de la ciencia de datos y de la medicina, debido a su impacto social y a la posibilidad de diseñar herramientas de apoyo a la toma de decisiones. En este proyecto se trabaja con un conjunto de datos que **clasifica a estudiantes** en dos categorías: aquellos que presentan **síntomas de depresión** y **aquellos que no**.\n",
+    "\n",
+    "El desarrollo del proyecto implica la aplicación de un trabajo de clasificación que abarca etapas como el preprocesamiento de datos, el análisis exploratorio, la selección de características y la construcción de modelos. Estas fases permiten no solo entrenar y evaluar algoritmos predictivos, sino también comprender mejor la calidad y distribución de los datos, el cual es un aspecto fundamental en la medicina y por ende para desarrollar un proyecto de ciencia de datos que ayude a resolver este problema correctamente.\n",
+    "\n",
+    "De esta manera, este proyecto es una **oportunidad para evidenciar** de manera práctica los conceptos revisados en clase, desde la creación de un espacio colaborativo para desarrollar el proyecto hasta la presentación de resultados de modelos de predicción. Además, nos muestra la importancia de aplicar metodologías de trabajo estructuradas cuando se trabaja de manera colaborativa en proyectos de ciencia de datos. "
    ]
   },
   {
@@ -13,7 +36,14 @@
    "id": "abdeee30",
    "metadata": {},
    "source": [
-    "## <font color= #bbc28d>• **Antecedentes** </font>"
+    "## <font color= #bbc28d>• **Antecedentes** </font>\n",
+    "Según la Organización Mundial de la Salud (OMS), **alrededor del 4,0 % de la población mundial padece depresión**, cifra que asciende al 5,7 % en adultos (4,6 % en hombres y 6,9 % en mujeres) y al 5,9 % en personas de 70 años o más. No resulta sorprendente que la salud mental influya de forma directa en nuestros pensamientos, conductas y acciones; también determina la manera en que interactuamos con los demás, afrontamos las situaciones y tomamos decisiones. En términos generales, **la salud mental tiene un impacto en todos los ámbitos de la vida**, desde las acciones más cotidianas a casos mas específicos.\n",
+    "\n",
+    "El uso de técnicas de machine learning para la predicción de trastornos de salud mental **no es una idea reciente**, sino que ha sido algo que se ha estado estudiando. Por ejemplo, **Islam et al. (2024)** compararon varios modelos de aprendizaje automático aplicados desde 2018 en diferentes países, evaluando la predicción de depresión, trastorno bipolar y tendencias suicidas. Por otro lado, **Madububambachu, Ukpebor e Ihezue (2024)** exploran cómo el machine learning puede ayudar a predecir problemas de salud mental en estudiantes universitarios, analizando analizando modelos/estudios previos que van desde SVM hasta redes neuronales convolucionales. Asimismo, otro estudio que se dedico a comparar los diferentes modelos de ML fue el de **Chung and Teo (2022)**, donde los trastornos a los que se enfocan tratan la esquizofrenia, la bipolaridad, la ansiedad y depresión, también comparando diversos casos de estudio y resultados.\n",
+    "\n",
+    "Estos ejemplos muestran que ya se han hecho varios intentos por predecir la salud mental de las personas usando machine learning. Además, nos ayudan a ver que **técnicas y modelos** han funcionado mejor para distintos trastornos y a entender por qué estos avances podrían ser realmente útiles, no solo para investigadores, sino para cualquiera que quiera mejorar la detección y el cuidado de la salud mental.\n",
+    "\n",
+    "Nuestro proyecto busca usar machine learning para predecir de manera más precisa qué **estudiantes muestran síntomas de depresión**, manejando los datos de forma ética y responsable. Con esto, no solo entendemos mejor los factores que influyen en la depresión, sino que también podemos **crear herramientas prácticas** que ayuden a detectar y atender estos casos de forma temprana en las escuelas y universidades."
    ]
   },
   {
@@ -21,7 +51,19 @@
    "id": "c7295488",
    "metadata": {},
    "source": [
-    "## <font color= #bbc28d>• **Objetivos** </font>"
+    "## <font color= #bbc28d>• **Objetivos** </font>\n",
+    "#### <font color= #99c0c4>• **Particular** </font>\n",
+    "- Establecer un proceso de ingesta, visualización, transformación, modelado y predicción de datos, a partir del análisis de un dataset sobre la prevalencia de la depresión en estudiantes, con el propósito de construir una metodología sólida, eficiente y adaptable para el desarrollo de proyectos en Ciencia de Datos.\n",
+    "\n",
+    "#### <font color= #99c0c4>• **Específicos** </font>\n",
+    "- Integrar múltiples conocimientos adquiridos a lo largo de nuestra carrera en materia de tratamiento de datos, optimización, machine learning y presentación de resultados, para consolidar una entrega que cumpla con los estándares de calidad de la industria y refleje nuestro aprendizaje como estudiantes.\n",
+    "\n",
+    "- Definir la estructura y cadena de producción de un proyecto de Ciencia de Datos, mediante la familiarización con la documentación de un proyecto, investigación de librerías, convenciones comunes y buenas prácticas, con la finalidad de ser capaces de desarrollar proyectos de calidad a futuro en nuestra carrera.\n",
+    "- Categorizar correctamente los datos encontrados mediante el uso de algoritmos de machine learning, para demostrar nuestra capacidad de modelado y el éxito de nuestro proyecto, a través de las métricas adecuadas y representativas de nuestro problema de clasificación.\n",
+    "\n",
+    "#### <font color= #99c0c4>• **Criterios de Éxito** </font>\n",
+    "- Al tratarse de un problema de **clasificación**, existen varias métricas que podríamos aplicas [i.e. Precision, Recall, F1-score, etc] sin embargo, al no querer sacrificar algunas por otras, nos enfocaremos mas en la `F1-Score` y la `matríz de confusión` para poder retroalimentar nuestros modelos.\n",
+    "- Nos gustaría contar con un `F1-Score > 85`."
    ]
   },
   {
@@ -29,7 +71,23 @@
    "id": "d5e332fc",
    "metadata": {},
    "source": [
-    "## <font color= #bbc28d>• **Planteamiento del Problema** </font>"
+    "## <font color= #bbc28d>• **Planteamiento del Problema** </font>\n",
+    "#### <font color= #99c0c4>• **Formulación precisa del problema** </font>\n",
+    "- ¿Se puede desarrollar un modelo de machine learning que funcione como apoyo para identificar de manera temprana a estudiantes con riesgo de depresión?\n",
+    "\n",
+    "#### <font color= #99c0c4>• **Variables clave** </font>\n",
+    "Dentro de las **variables de entrada**, podemos encontrar dos categorías:\n",
+    "- `Demográficas` ~ Género, edad, ciudad y profesión.\n",
+    "- `Factores psicológicos`o de estilo de vida ~ Presión académica o de trabajo, hábitos alimenticios, estrés financiero, etc.\n",
+    "\n",
+    "**Variable de salida:** presencia o ausencia de síntomas depresivos.\n",
+    "\n",
+    "#### <font color= #99c0c4>• **Impacto esperado si se resuelve** </font>\n",
+    "Como se menciono previamente, la **detección temprana de una enfermedad mental** puede traer beneficios significativos como una mejor calidad de vida, ahorro en el costo de tratamientos, evitar la cronicidad e incluso el suicido en jóvenes. \n",
+    "Si nuestro proyecto resulta exitoso, podemos brindar información sobre **que facotres son los mas relevantes** en la detección de depresión para así poder diseñar nuevas estrategias con un nuevo enfoque. Además de construir una herramienta que puede ser utilizada en contextos académicos a la par de profesionales para un diagnóstico y tratamiento más efectivo y temprano.\n",
+    "\n",
+    "#### <font color= #99c0c4>• **Riesgos conocidos** </font>\n",
+    "Dentro de los riesgos a los cuáles nos enfrentamos son los **valores faltantes** [que bien no son muchos], **variables** que podrían resultar **irrelevantes** [como la profesión ya que el 97% son estudiantes], un **sesgo geográfico** ya que las ciudades que aparecen son todas en la **India** lo cuál no es una representación fiel de los estudiantes en Mexico [aunque no encontramos un dataset sobre México en específico], el famoso **dataleakage** que podría ocurrir en el procesamiento de los datos o al entrenar los modelos y que existan **factores relevantes** para la detección de la depresión **que no se encuentren en el conjunto de datos**, sin importar los grandes beneficios que puede traer la detección temprana de depresión es una tarea compleja ya que puede implicar **factores genéticos, del entorno en donde viven o incluso experiencias de la vida** que es díficil de concentrar todo en un solo conjunto de datos.\n"
    ]
   },
   {
@@ -61,7 +119,17 @@
    "id": "1b90c347",
    "metadata": {},
    "source": [
-    "## <font color= #bbc28d>• **Referencias** </font>"
+    "## <font color= #bbc28d>• **Referencias** </font>\n",
+    "**Papers Científicos**\n",
+    "- Islam, M. M., Hassan, S., Akter, S., Jibon, F. A., & Sahidullah, M. (2024). A comprehensive review of predictive analytics models for mental illness using machine learning algorithms. Healthcare Analytics, 6, 100350. https://doi.org/10.1016/j.health.2024.100350 \n",
+    "- Madububambachu, U., Ukpebor, A., & Ihezue, U. (2024). Machine Learning Techniques to Predict Mental Health Diagnoses: A Systematic Literature Review. Clinical Practice and Epidemiology in Mental Health, 20(1). https://doi.org/10.2174/0117450179315688240607052117\n",
+    "- Chung, J., & Teo, J. (2022). Mental health prediction using Machine Learning: Taxonomy, applications, and challenges. Applied Computational Intelligence and Soft Computing, 2022, 1–19. https://doi.org/10.1155/2022/9970363 \n",
+    "\n",
+    "**Páginas Web**\n",
+    "- World Health Organization: WHO & World Health Organization: WHO. (2025, August 29). Trastorno depresivo (depresión). https://www.who.int/es/news-room/fact-sheets/detail/depression\n",
+    "\n",
+    "**Dataset**\n",
+    "- https://www.kaggle.com/datasets/hopesb/student-depression-dataset "
    ]
   }
  ],
