--- a/notebooks/01_eda_inicial.ipynb
+++ b/notebooks/01_eda_inicial.ipynb
@@ -28,15 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "50ac8a34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "IMPORTS\n",
-    "\"\"\"\n",
-    "\n",
+    "# Import modules\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -45,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1eefd87e",
    "metadata": {},
    "outputs": [
@@ -403,9 +400,7 @@
    ],
    "source": [
     "# Data import\n",
-    "\n",
     "df = pd.read_csv(\"../data/raw/depression_dataset.csv\")\n",
-    "\n",
     "df"
    ]
   },
