<Docs>: Changed due date on all notebooks

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -11,7 +11,7 @@
     "# <font color= #bbc28d> **Clasificación de Depresión - Informe Final** </font>\n",
     "#### <font color= #2E9AFE> `Proyecto de Ciencia de Datos`</font>\n",
     "- <Strong> Sofía Maldonado, Diana Valdivia, Samantha Sánchez & Vivienne Toledo </Strong>\n",
-    "- <Strong> Fecha </Strong>: xx/xx/2025.\n",
+    "- <Strong> Fecha </Strong>: 30/09/2025\n",
     "\n",
     "___\n",
     "\n",
