renamed stuff and deleted files

--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -9521,15 +9521,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "id": "edebe319",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train_final.to_csv(r'..\\data\\processed\\Train.csv', index=False)\n",
-    "y_train.to_csv(r'..\\data\\processed\\Y_Train.csv', index=False)\n",
+    "y_train.to_csv(r'..\\data\\processed\\y_Train.csv', index=False)\n",
     "X_test_final.to_csv(r'..\\data\\processed\\Test.csv', index=False)\n",
-    "y_test.to_csv(r'..\\data\\processed\\Y_Test.csv', index=False)"
+    "y_test.to_csv(r'..\\data\\processed\\y_Test.csv', index=False)"
    ]
   }
  ],
