doc: add summary of data wrangling process to project report

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -108,6 +108,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df112619",
+   "metadata": {},
+   "source": [
+    "En esta etapa se siguió trabajando con nuestro archivo archivo depression_dataset.csv, aplicando diferentes transformaciones y limpiezas para preparar los datos antes del modelado. Las acciones principales fueron:\n",
+    "\n",
+    "#### <font color= #99c0c4>1. **Tratamiento de datos faltantes** </font>\n",
+    "- Se detectó que la columna Financial Stress contenía 3 valores nulos.\n",
+    "\n",
+    "- Dado que era una cantidad pequeña en comparación con el total de registros, se decidió eliminar esas filas.\n",
+    "\n",
+    "#### <font color= #99c0c4>2. **Filtrado de datos categóricos** </font>\n",
+    "- Se identificaron variables con categorías poco representativas (con una o dos filas por valor), como City, Dietary Habits, Sleep Duration y Profession.\n",
+    "\n",
+    "- Se eliminaron registros aislados para evitar problemas de ruido y mejorar la representatividad de los datos.\n",
+    "\n",
+    "#### <font color= #99c0c4>3. **Ajuste del dataset al enfoque del proyecto** </font>\n",
+    "- Dado que el análisis está dirigido a estudiantes, se filtraron los registros de la variable Profession para conservar solo aquellos relacionados con población estudiantil.\n",
+    "\n",
+    "#### <font color= #99c0c4>4. **Verificación final** </font>\n",
+    "- Se comprobó que el dataset resultante no presentara valores faltantes.\n",
+    "\n",
+    "- Se aseguró la coherencia de las variables categóricas para proceder con la codificación en fases posteriores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "623d8f01",
    "metadata": {},
    "source": [
