[Feat]: Started working on the EDA section on the report, and discovered that the EDA notebook is wrong gays

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -100,6 +100,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffea20fb",
+   "metadata": {},
+   "source": [
+    "Nuestro dataset cuenta con 17 variables y 1 target, de las cuales 9 son numéricas y 8 categóricas. Nuestra target es binaria, describiendo si la persona tiene depresión [0] o no [1]. \n",
+    "\n",
+    "#### <font color= #99c0c4>• **Variables Cuantitativas** </font>\n",
+    "\n",
+    "La mayoría de nuestros registros provienen de estudiantes o adultos jóvenes. Por lo tanto, gran parte de ellos no tiene trabajo, y reportan valores bajos en `Job Satisfaction` y `Work Pressure`. Sin embargo, sí reportan `altos valores de estrés académico y financiero`, debido a su cualidad de estudiantes.\n",
+    "\n",
+    "A primera vista, podemos notar la presencia de valores atípicos en la edad, por lo que sería importante considerarlos para el tratamiento. Además de un desbalance ligero en las clases de predicción que puede ser tratado con la generación de datos sintéticos.\n",
+    "\n",
+    "En cuanto a la influencia de cada variable a la presencia de la depresión, los datos sugieren que la `depresión aumenta conforme lo hace el estrés académico y financiero, así como la insatisfacción con los estudios y las horas dedicadas al estudio o trabajo.` \n",
+    "\n",
+    "#### <font color= #99c0c4>• **Variables Cualitativas** </font>\n",
+    "\n",
+    "Las variables cualitativas comprenden el sexo de les participantes, hábitos alimenticios, de higiene de sueño, ciudad, antecedentes de depresión en su familia y profesión. Analizando estos valores, se descubrió que en los registros, el sexo de las personas no influye demasiado en la prevalencia de la depresión. Sin embargo, los hábitos de alimentación, sueño, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fb0563ce",
    "metadata": {},
    "source": [
