[Feat]: EDA section done

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -115,7 +115,11 @@
     "\n",
     "#### <font color= #99c0c4>• **Variables Cualitativas** </font>\n",
     "\n",
-    "Las variables cualitativas comprenden el sexo de les participantes, hábitos alimenticios, de higiene de sueño, ciudad, antecedentes de depresión en su familia y profesión. Analizando estos valores, se descubrió que en los registros, el sexo de las personas no influye demasiado en la prevalencia de la depresión. Sin embargo, los hábitos de alimentación, sueño, "
+    "Las variables cualitativas comprenden el sexo de les participantes, hábitos alimenticios, de higiene de sueño, ciudad, antecedentes de depresión en su familia y profesión. Analizando estos valores, se descubrió que en los registros, el sexo de las personas no influye demasiado en la prevalencia de la depresión. Sin embargo, `pobres hábitos de alimentación y calidad de sueño incrementan la prevalencia de la depresión.`\n",
+    "\n",
+    "Además, las `personas que solo terminaron el bachillerato presentan mayores índices de depresión, así como aquellas con pensamientos suicidas`. Mientras que los antecedentes de enfermedades mentales en la familia de las personas entrevistadas no parece afectar la presencia de depresión.\n",
+    "\n",
+    "Por otro lado, existen variables categóricas que no aportan demasiado al análisis (Profession), pues se tratan de estudiantes. Así como ciudad, que quizás no aporte demasiado valor al estudio."
    ]
   },
   {
