--- a/notebooks/01_eda_inicial.ipynb
+++ b/notebooks/01_eda_inicial.ipynb
@@ -1642,7 +1642,7 @@
    "id": "ad52c662",
    "metadata": {},
    "source": [
-    "### <font color= #bbc28d>• **Descripción de Variables Numéricas - Histogramas** </font>"
+    "### <font color= #bbc28d>• **Descripción de Variables Numéricas** </font>"
    ]
   },
   {
@@ -1732,234 +1732,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4fb8412",
+   "id": "f2289f44",
    "metadata": {},
    "source": [
-    "### <font color= #bbc28d>• **Descripción de Variables Categóricas** </font>"
+    "- El estrés financiero, estrés académico y horas de estudio/trabajo son factores que influyen de manera directamente proporcional en la prevalencia de la depresión. \n",
+    "- A primera vista, parece que la edad afecta en la presencia de la depresión, pero debido a que contamos con datos en su mayoría de estudiantes, y la mayoría de elles presenta depresión, esta tendencia puede ser explicada por la naturaleza de nuestros datos y no porque exista una correlación."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "60c7d23b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Gender",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "City",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Profession",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Sleep Duration",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Dietary Habits",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Degree",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Have you ever had suicidal thoughts ?",
-         "rawType": "object",
-         "type": "unknown"
-        },
-        {
-         "name": "Family History of Mental Illness",
-         "rawType": "object",
-         "type": "unknown"
-        }
-       ],
-       "ref": "c4db5ceb-4d01-4697-a352-bc213b7027dd",
-       "rows": [
-        [
-         "count",
-         "27898",
-         "27898",
-         "27898",
-         "27898",
-         "27898",
-         "27898",
-         "27898",
-         "27898"
-        ],
-        [
-         "unique",
-         "2",
-         "52",
-         "14",
-         "5",
-         "4",
-         "28",
-         "2",
-         "2"
-        ],
-        [
-         "top",
-         "Male",
-         "Kalyan",
-         "Student",
-         "Less than 5 hours",
-         "Unhealthy",
-         "Class 12",
-         "Yes",
-         "No"
-        ],
-        [
-         "freq",
-         "15546",
-         "1570",
-         "27867",
-         "8309",
-         "10316",
-         "6080",
-         "17656",
-         "14397"
-        ]
-       ],
-       "shape": {
-        "columns": 8,
-        "rows": 4
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Profession</th>\n",
-       "      <th>Sleep Duration</th>\n",
-       "      <th>Dietary Habits</th>\n",
-       "      <th>Degree</th>\n",
-       "      <th>Have you ever had suicidal thoughts ?</th>\n",
-       "      <th>Family History of Mental Illness</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "      <td>27898</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>2</td>\n",
-       "      <td>52</td>\n",
-       "      <td>14</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>Kalyan</td>\n",
-       "      <td>Student</td>\n",
-       "      <td>Less than 5 hours</td>\n",
-       "      <td>Unhealthy</td>\n",
-       "      <td>Class 12</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>15546</td>\n",
-       "      <td>1570</td>\n",
-       "      <td>27867</td>\n",
-       "      <td>8309</td>\n",
-       "      <td>10316</td>\n",
-       "      <td>6080</td>\n",
-       "      <td>17656</td>\n",
-       "      <td>14397</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Gender    City Profession     Sleep Duration Dietary Habits    Degree  \\\n",
-       "count   27898   27898      27898              27898          27898     27898   \n",
-       "unique      2      52         14                  5              4        28   \n",
-       "top      Male  Kalyan    Student  Less than 5 hours      Unhealthy  Class 12   \n",
-       "freq    15546    1570      27867               8309          10316      6080   \n",
-       "\n",
-       "       Have you ever had suicidal thoughts ? Family History of Mental Illness  \n",
-       "count                                  27898                            27898  \n",
-       "unique                                     2                                2  \n",
-       "top                                      Yes                               No  \n",
-       "freq                                   17656                            14397  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe(include=\"object\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89feb1dc",
-   "metadata": {},
-   "source": [
-    "<li> La mayoría de personas dicen haber tenido pensamientos suicidas\n",
-    "<li> La mayoría <b>no</b> tiene un historial familiar de problemas con la salud mental"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "809a4cbc",
+   "execution_count": 60,
+   "id": "8daaa371",
    "metadata": {},
    "outputs": [
     {
@@ -2022,7 +1805,7 @@
          "type": "float"
         }
        ],
-       "ref": "aedf6166-0ed3-464d-a9a8-ba569ca0def9",
+       "ref": "3a7eb0c8-2120-441f-9192-ba6f09d4d9c4",
        "rows": [
         [
          "count",
@@ -2052,16 +1835,16 @@
         ],
         [
          "std",
-         "40642.01506255245",
-         "4.905651044767202",
-         "1.3814624775976228",
-         "0.04399439719157949",
-         "1.4707084837215814",
-         "1.361121586664181",
-         "0.0443967826449146",
-         "3.707598221235986",
-         "1.4373466968347501",
-         "0.4926398576215464"
+         "40642.01506255254",
+         "4.905651044767314",
+         "1.3814624775978002",
+         "0.043994397191592066",
+         "1.4707084837216104",
+         "1.361121586664022",
+         "0.044396782644913355",
+         "3.707598221235769",
+         "1.4373466968345736",
+         "0.4926398576215278"
         ],
         [
          "min",
@@ -2306,7 +2089,7 @@
        "max            5.000000      1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2326,10 +2109,236 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f15e086",
+   "id": "b4fb8412",
    "metadata": {},
    "source": [
-    "### <font color= #bbc28d>• **Descripción de Variables Categóricas - Bar plots** </font>"
+    "### <font color= #bbc28d>• **Descripción de Variables Categóricas** </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "60c7d23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Gender",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "City",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Profession",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Sleep Duration",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Dietary Habits",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Degree",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Have you ever had suicidal thoughts ?",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Family History of Mental Illness",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "c4db5ceb-4d01-4697-a352-bc213b7027dd",
+       "rows": [
+        [
+         "count",
+         "27898",
+         "27898",
+         "27898",
+         "27898",
+         "27898",
+         "27898",
+         "27898",
+         "27898"
+        ],
+        [
+         "unique",
+         "2",
+         "52",
+         "14",
+         "5",
+         "4",
+         "28",
+         "2",
+         "2"
+        ],
+        [
+         "top",
+         "Male",
+         "Kalyan",
+         "Student",
+         "Less than 5 hours",
+         "Unhealthy",
+         "Class 12",
+         "Yes",
+         "No"
+        ],
+        [
+         "freq",
+         "15546",
+         "1570",
+         "27867",
+         "8309",
+         "10316",
+         "6080",
+         "17656",
+         "14397"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Profession</th>\n",
+       "      <th>Sleep Duration</th>\n",
+       "      <th>Dietary Habits</th>\n",
+       "      <th>Degree</th>\n",
+       "      <th>Have you ever had suicidal thoughts ?</th>\n",
+       "      <th>Family History of Mental Illness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "      <td>27898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Kalyan</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>Less than 5 hours</td>\n",
+       "      <td>Unhealthy</td>\n",
+       "      <td>Class 12</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>15546</td>\n",
+       "      <td>1570</td>\n",
+       "      <td>27867</td>\n",
+       "      <td>8309</td>\n",
+       "      <td>10316</td>\n",
+       "      <td>6080</td>\n",
+       "      <td>17656</td>\n",
+       "      <td>14397</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Gender    City Profession     Sleep Duration Dietary Habits    Degree  \\\n",
+       "count   27898   27898      27898              27898          27898     27898   \n",
+       "unique      2      52         14                  5              4        28   \n",
+       "top      Male  Kalyan    Student  Less than 5 hours      Unhealthy  Class 12   \n",
+       "freq    15546    1570      27867               8309          10316      6080   \n",
+       "\n",
+       "       Have you ever had suicidal thoughts ? Family History of Mental Illness  \n",
+       "count                                  27898                            27898  \n",
+       "unique                                     2                                2  \n",
+       "top                                      Yes                               No  \n",
+       "freq                                   17656                            14397  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include=\"object\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da453ae2",
+   "metadata": {},
+   "source": [
+    "- Las variables de Ciudad, Profesión y Carrera son aquellas que mayores categorías tienen.\n",
+    "\n",
+    "- Existen las siguientes tendencias en nuestro dataset:\n",
+    "    - La mayoría son hombres\n",
+    "    - La mayoría son estudiantes\n",
+    "    - La mayoría de personas duermen menos de 5hrs diarias\n",
+    "    - La mayoría de personas tienen hábitos alimenticios poco saludables\n",
+    "    - La mayoría de personas han completado el bachiller\n",
+    "    - La mayoría de personas presentan pensamientos suicidas\n",
+    "    - La mayoría de personas no tienen antecedentes de enfermedades mentales en su familia"
    ]
   },
   {
