[Docs]: Readme and objective update

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -59,7 +59,10 @@
     "- Integrar múltiples conocimientos adquiridos a lo largo de nuestra carrera en materia de tratamiento de datos, optimización, machine learning y presentación de resultados, para consolidar una entrega que cumpla con los estándares de calidad de la industria y refleje nuestro aprendizaje como estudiantes.\n",
     "\n",
     "- Definir la estructura y cadena de producción de un proyecto de Ciencia de Datos, mediante la familiarización con la documentación de un proyecto, investigación de librerías, convenciones comunes y buenas prácticas, con la finalidad de ser capaces de desarrollar proyectos de calidad a futuro en nuestra carrera.\n",
+    "\n",
     "- Categorizar correctamente los datos encontrados mediante el uso de algoritmos de machine learning, para demostrar nuestra capacidad de modelado y el éxito de nuestro proyecto, a través de las métricas adecuadas y representativas de nuestro problema de clasificación.\n",
+    "\n",
+    "- Facilitar la detección temprana de la depresión mediante el análisis de un dataset de la prevalencia de depresión en estudiantes, para identificar los factores y señales de riesgo que intersectan a este padecimiento y proponer soluciones o herramientas de prevención. \n",
     "\n",
     "#### <font color= #99c0c4>• **Criterios de Éxito** </font>\n",
     "- Al tratarse de un problema de **clasificación**, existen varias métricas que podríamos aplicar [i.e. Precision, Recall, F1-score, etc]. Sin embargo, al no querer sacrificar la sensibilidad de unos tipos de errores por otros, nos enfocaremos más en la `F1-Score` y la `matriz de confusión` para poder retroalimentar nuestros modelos.\n",
@@ -179,7 +182,7 @@
     "- World Health Organization: WHO & World Health Organization: WHO. (2025, August 29). Trastorno depresivo (depresión). https://www.who.int/es/news-room/fact-sheets/detail/depression\n",
     "\n",
     "**Dataset**\n",
-    "- https://www.kaggle.com/datasets/hopesb/student-depression-dataset "
+    "- Opeyemi, S. (2024, noviembre 22). *Student Depresion Dataset*. Kaggle. https://www.kaggle.com/datasets/hopesb/student-depression-dataset "
    ]
   }
  ],
