[feat]: entrega trabajo en clase

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -161,6 +161,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93a75782",
+   "metadata": {},
+   "source": [
+    "## <font color= #bbc28d>• **Modelado** </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9faac06b",
+   "metadata": {},
+   "source": [
+    "Para realizar la tarea de clasificación, se entrenarán los siguientes modelos:\n",
+    "\n",
+    "- Logistic Regression (como baseline)\n",
+    "\n",
+    "- Support Vector Classifier\n",
+    "\n",
+    "- XGBoost\n",
+    "\n",
+    "- Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "623d8f01",
    "metadata": {},
    "source": [
