--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -8,7 +8,7 @@
     "___\n",
     "<img style=\"float: right; margin: 15px 15px 15px 15px;\" src=\"https://img.freepik.com/free-vector/depression-concept-illustration_114360-3747.jpg?t=st=1657678284~exp=1657678884~hmac=b8b1d71ca0a8eb2e4ff5bf31d6a98624112f1a2254b0f39e92254ed12d7875b2\" width=\"240px\" height=\"180px\" />\n",
     "\n",
-    "# <font color= #bbc28d> **Clasificación de Depresión - Informe Final** </font>\n",
+    "# <font color= #bbc28d> **Clasificación de Depresión - Limpieza de Datos** </font>\n",
     "#### <font color= #2E9AFE> `Proyecto de Ciencia de Datos`</font>\n",
     "- <Strong> Sofía Maldonado, Diana Valdivia, Samantha Sánchez & Vivienne Toledo </Strong>\n",
     "- <Strong> Fecha </Strong>: 30/09/2025.\n",
