--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 1,
    "id": "bcb5639f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline"
    ]
   },
   {
@@ -2223,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "id": "cd246c74",
    "metadata": {},
    "outputs": [
@@ -2281,7 +2282,7 @@
     }
    ],
    "source": [
-    "# Verificar que habitos alimenticios tienen muy pocos registros\n",
+    "# Verificar qué hábitos alimenticios tienen muy pocos registros\n",
     "df['Dietary Habits'].value_counts()"
    ]
   },
@@ -2684,7 +2685,7 @@
    "id": "7e72d934",
    "metadata": {},
    "source": [
-    "Podemos ver como others tiene solo **35** registros, por lo que podemos eliminarla."
+    "Podemos ver como **Others** tiene solo **35** registros, por lo que podemos eliminarla."
    ]
   },
   {
@@ -9452,7 +9453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "id": "be12d422",
    "metadata": {},
    "outputs": [
@@ -9485,7 +9486,7 @@
     "\n",
     "# Aplicarlo\n",
     "X_train_city = encoder.transform(X_train[['City']])\n",
-    "X_test_city = encoder.transform(X_test[['City']])\n"
+    "X_test_city = encoder.transform(X_test[['City']])"
    ]
   },
   {
@@ -9535,7 +9536,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lab_modelado",
+   "display_name": "depression-classification",
    "language": "python",
    "name": "python3"
   },
@@ -9549,7 +9550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
