[Docs]: continued revising typos.

--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -5677,7 +5677,7 @@
    "metadata": {},
    "source": [
     "## <font color= #bbc28d>• **Codificar Variables - Binarias** </font>\n",
-    "Al ser categorías binarias, aplicar un One-Hot sería lo mejor, sin embargo, como solo puede tener dos opciones y para evitar correlacion se elimina una de las columnas dummy nuevas, podemos mapear mejor los valores dentro de la columna existente, las variables a codificar son **Gender**, **Pensamientos Suicidas** & **Historia Familiar con depresión**:"
+    "Al ser categorias binarias, aplicar una codificación tipo One-Hot sería lo mejor, sin embargo, esto solo genera dos valores posibles, lo que da pie a la correlación. Por lo tanto, para mapear mejor los valores dentro de la columna existente, se eliminará una de las variables dummy nuevas. Las variables a codificar de esta manera son **Gender**, **Pensamientos Suicidas** e **Historia Familiar con depresión:**"
    ]
   },
   {
@@ -6934,7 +6934,7 @@
    "metadata": {},
    "source": [
     "## <font color= #bbc28d>• **Codificar Variables - Múltiples** </font>\n",
-    "Al ser pocos los valores de las columnas, podemos tambien codificar las variables de forma manual, incluso con orden jerárquico cuando sea aplicable, si no hay un orden, entonces se procederá a realizar One-Hot:"
+    "Al ser pocos los valores de las columnas, podemos también codificar las variables de forma manual, incluso con orden jerárquico cuando sea aplicable. Si no hay un orden, entonces se procederá a realizar One-Hot:"
    ]
   },
   {
@@ -6942,7 +6942,7 @@
    "id": "e33a71bc",
    "metadata": {},
    "source": [
-    "Para la columna de degree, al ser muchos los posibles valores, reduciremos las categorías a solo 4: Secundaria, Undergraduate, Graduate & Doctorado."
+    "Para la columna de degree, al ser muchos los posibles valores, reduciremos las categorías a solo 4: Secundaria, Undergraduate, Graduate & Doctorate."
    ]
   },
   {
