[Feat]: i think the preprocessor function is done

--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bcb5639f",
    "metadata": {},
    "outputs": [],
@@ -9480,7 +9480,7 @@
     "    sparse_output=False\n",
     ")\n",
     "\n",
-    "# Entrenar el objeto con loss datos del train\n",
+    "# Entrenar el objeto con los datos del train\n",
     "encoder.fit(X_train[['City']])\n",
     "print(f'Si todas son cero, entonces es: {encoder.categories_[0][0]}')\n",
     "\n",
@@ -9491,7 +9491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "id": "fad53732",
    "metadata": {},
    "outputs": [],
@@ -9507,7 +9507,7 @@
     "X_train = X_train.drop(columns=['City'])\n",
     "X_test = X_test.drop(columns=['City'])\n",
     "\n",
-    "# Junatr las nuevas columnas con el dataset antiguo\n",
+    "# Juntar las nuevas columnas con el dataset antiguo\n",
     "X_train_final = pd.concat([X_train, X_train_city_df], axis=1)\n",
     "X_test_final = pd.concat([X_test, X_test_city_df], axis=1)"
    ]
@@ -9531,6 +9531,116 @@
     "y_train.to_csv(r'..\\data\\processed\\y_Train.csv', index=False)\n",
     "X_test_final.to_csv(r'..\\data\\processed\\Test.csv', index=False)\n",
     "y_test.to_csv(r'..\\data\\processed\\y_Test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2596fb1",
+   "metadata": {},
+   "source": [
+    "# Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da8c090a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/raw/depression_dataset.csv\")\n",
+    "\n",
+    "def preprocessor(df):\n",
+    "    # 1. Eliminar valores nulos\n",
+    "    df.dropna(inplace=True)\n",
+    "\n",
+    "\n",
+    "    # 2. Filtrado de categorías que otorgan poca información debido a su baja prevalencia\n",
+    "    # City\n",
+    "    ciudades = df['City'].value_counts()[df['City'].value_counts() < 450]\n",
+    "    df = df[~df['City'].isin(ciudades.index)]\n",
+    "    # Dietary Habits\n",
+    "    df = df[df['Dietary Habits'] != 'Others']\n",
+    "    # Sleep Duration\n",
+    "    df = df[df['Sleep Duration'] != 'Others']\n",
+    "    # Degree\n",
+    "    df = df[df['Degree'] != 'Others']\n",
+    "    # Age\n",
+    "    df = df[df['Age'] <= 35]\n",
+    "    # Academic Pressure\n",
+    "    df = df[df['Academic Pressure'] > 0]\n",
+    "    # Study Satisfaction\n",
+    "    df = df[df['Study Satisfaction'] > 0]\n",
+    "\n",
+    "    # 3. Eliminar variables que no son buenas predictoras\n",
+    "    df.drop(columns=['Work Pressure', 'Profession', 'Job Satisfaction', 'id'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "    # 4. Mapear las variables categóricas binarias\n",
+    "    gender = {'Male' : 0, 'Female' : 1}\n",
+    "    general = {'Yes' : 1, 'No' : 0}\n",
+    "    df['Gender'] = df['Gender'].map(gender)\n",
+    "    df['Have you ever had suicidal thoughts ?'] = df['Have you ever had suicidal thoughts ?'].map(general)\n",
+    "    df['Family History of Mental Illness'] = df['Family History of Mental Illness'].map(general)\n",
+    "\n",
+    "\n",
+    "    # 5. Mapear las variables categóricas múltiples\n",
+    "    degree = {\n",
+    "    \"Class 12\": \"Secondary\",\n",
+    "    \"B.Pharm\": \"Undergraduate\", \"BSc\": \"Undergraduate\", \"BA\": \"Undergraduate\", \"BCA\": \"Undergraduate\",\n",
+    "    \"B.Ed\": \"Undergraduate\", \"LLB\": \"Undergraduate\", \"BE\": \"Undergraduate\", \"BHM\": \"Undergraduate\",\n",
+    "    \"B.Com\": \"Undergraduate\", \"B.Arch\": \"Undergraduate\", \"B.Tech\": \"Undergraduate\", \"BBA\": \"Undergraduate\",\n",
+    "    \"M.Tech\": \"Postgraduate\", \"M.Ed\": \"Postgraduate\", \"MSc\": \"Postgraduate\", \"M.Pharm\": \"Postgraduate\",\n",
+    "    \"MCA\": \"Postgraduate\", \"MA\": \"Postgraduate\", \"MBA\": \"Postgraduate\", \"M.Com\": \"Postgraduate\", \"MHM\": \"Postgraduate\",\n",
+    "    \"PhD\": \"Doctorate\", \"MD\": \"Doctorate\", \"MBBS\": \"Doctorate\", \"LLM\": \"Doctorate\"\n",
+    "    }\n",
+    "    orden_degree = {\"Secondary\": 0, \"Undergraduate\": 1, \"Postgraduate\": 2, \"Doctorate\": 3}\n",
+    "    orden_alimentos = {'Healthy': 0, 'Unhealthy': 1, 'Moderate': 2}\n",
+    "    orden_siesta = {'Less than 5 hours': 0, '5-6 hours': 1, '7-8 hours': 2,'More than 8 hours': 3}\n",
+    "    # Aplicar el mapeo\n",
+    "    df['Degree'] = df['Degree'].map(degree)\n",
+    "    df['Degree'] = df['Degree'].map(orden_degree)\n",
+    "    df['Dietary Habits'] = df['Dietary Habits'].map(orden_alimentos)\n",
+    "    df['Sleep Duration'] = df['Sleep Duration'].map(orden_siesta)\n",
+    "\n",
+    "\n",
+    "    # 6. Train-Test-Val Split (60-20-20)\n",
+    "    X = df.drop(['Depression'], axis=1)\n",
+    "    y = df['Depression']\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.6, random_state=42)\n",
+    "    X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=0.5, random_state=42)\n",
+    "\n",
+    "\n",
+    "    # 7. Codificar variables múltiples mediante One-Hot\n",
+    "    encoder = OneHotEncoder(\n",
+    "        drop='first',\n",
+    "        handle_unknown='ignore',        # Evita error si aparece algo nuevo\n",
+    "        sparse_output=False\n",
+    "    )\n",
+    "    # Entrenar el objeto con los datos del train\n",
+    "    encoder.fit(X_train[['City']])\n",
+    "    print(f'Si todas son cero, entonces es: {encoder.categories_[0][0]}')\n",
+    "    # Aplicar One-Hot\n",
+    "    X_train_city = encoder.transform(X_train[['City']])\n",
+    "    X_test_city = encoder.transform(X_test[['City']])\n",
+    "    X_val_city = encoder.transform(X_val[['City']])\n",
+    "    # Obtener los nombres del One-Hot\n",
+    "    city_cols = encoder.get_feature_names_out(['City'])  # Nombres automáticos de columnas\n",
+    "    # Crear un df con las columnas codificadas\n",
+    "    X_train_city_df = pd.DataFrame(X_train_city, columns=city_cols, index=X_train.index)\n",
+    "    X_test_city_df = pd.DataFrame(X_test_city, columns=city_cols, index=X_test.index)\n",
+    "    X_val_city_df = pd.DataFrame(X_val_city, columns=city_cols, index=X_val.index)\n",
+    "    # Eliminar la columna original en el dataset\n",
+    "    X_train = X_train.drop(columns=['City'])\n",
+    "    X_test = X_test.drop(columns=['City'])\n",
+    "    X_val = X_val.drop(columns=['City'])\n",
+    "    # Juntar las nuevas columnas con el dataset antiguo\n",
+    "    X_train_final = pd.concat([X_train, X_train_city_df], axis=1)\n",
+    "    X_test_final = pd.concat([X_test, X_test_city_df], axis=1)\n",
+    "    X_val_final = pd.concat([X_val, X_val_city_df], axis=1)\n",
+    "\n",
+    "    return X_train_final, X_test_final, X_val_final, y_train, y_test, y_val"
    ]
   }
  ],
