[fix]: preprocessor now also exports OneHot encoder

--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -9640,7 +9640,7 @@
     "    X_test_final = pd.concat([X_test, X_test_city_df], axis=1)\n",
     "    X_val_final = pd.concat([X_val, X_val_city_df], axis=1)\n",
     "\n",
-    "    return X_train_final, X_test_final, X_val_final, y_train, y_test, y_val"
+    "    return X_train_final, X_test_final, X_val_final, y_train, y_test, y_val, encoder"
    ]
   }
  ],
